--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -144,17 +144,17 @@
                                     <i class="mdi mdi-account"></i>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right">
-                                    <a href="./app-profile.html" class="dropdown-item">
+                                    <a href="#" class="dropdown-item">
                                         <i class="icon-user"></i>
-                                        <span class="ml-2">Profile </span>
+                                        <span class="ml-2">{{ app.user.firstName }} </span>
                                     </a>
-                                    <a href="./email-inbox.html" class="dropdown-item">
+                                  {#   <a href="./email-inbox.html" class="dropdown-item">
                                         <i class="icon-envelope-open"></i>
                                         <span class="ml-2">Inbox </span>
-                                    </a>
-                                    <a href="./page-login.html" class="dropdown-item">
+                                    </a> #}
+                                    <a href="{{ path ('app_logout') }}" class="dropdown-item">
                                         <i class="icon-key"></i>
-                                        <span class="ml-2">Logout </span>
+                                        <span class="ml-2">Deconnection </span>
                                     </a>
                                 </div>
                             </li>
