creation de base de donnees

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -154,7 +154,7 @@
                                     </a> #}
                                     <a href="{{ path ('app_logout') }}" class="dropdown-item">
                                         <i class="icon-key"></i>
-                                        <span class="ml-2">Deconnection </span>
+                                        <span class="ml-2">Déconnexion </span>
                                     </a>
                                 </div>
                             </li>
