--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -1,16 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomePageController!{% endblock %}
+{% block title %} Accueil {% endblock %}
 
 {% block body %}
 
 
-    <h1>Hello {{ controller_name }}! ✅</h1>
+   <center>  <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/hernat/Bureau/Exercice/projet/src/Controller/HomePageController.php'|file_link(0) }}">src/Controller/HomePageController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/hernat/Bureau/Exercice/projet/templates/home_page/index.html.twig'|file_link(0) }}">templates/home_page/index.html.twig</a></code></li>
-    </ul>
+    <h1>Ici c'est l'accueil</h1>
 
+
+
+
+ 
+
+</center>
 {% endblock %}
